# setup_project_plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Commands.md  LICENSE  README.md  WORKFLOW.md  conftest.py  requirements.txt  workflow.md
.claude-plugin/: marketplace.json  plugin.json
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
commands/: sn-init.md  sn-session-report.md  sn-setup.md
docs/: HOOK-AUDIT-2026-06-25.md  MIGRATION.md  backlog.md
hooks/: README.md
platform-marketplace/: README.md
scripts/: claude_md_merger.py  commands_migration.py  errors.py  gen_subagent_index.py  orchestrator.py  policy_apply.py  policy_claude_md.py  policy_cli.py  policy_errors.py  policy_loader.py  policy_pdpa.py  policy_settings_merge.py  policy_state.py  profile_cli.py  session_report.py  sn_init.py  sn_logging.py  validate_marketplace.py  workspace_cli.py
skills/sn-setup/templates/lang/py/: .gitignore  Makefile.py  pyproject.toml
skills/sn-setup/templates/lang/py/mcp_server/: main.py
skills/sn-setup/templates/lang/py/src/: agent.py  orchestrator.py
skills/sn-setup/templates/lang/py/tests/: test_client.py
tests/: conftest.py  test_catalog_content.py  test_commands_migration.py  test_marketplace_producer.py  test_pdpa_hooks.py  test_policy_apply.py  test_policy_claude_md.py  test_policy_cli.py  test_policy_loader.py  test_policy_pdpa.py  test_policy_settings_merge.py  test_policy_state.py  test_profile_cli.py  test_sn_init.py  test_sn_init_workspace_pair.py  test_workspace_cli.py  (+1 more)
(+349 files in other folders)
